kubernetes/apps/media/jellyfin/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: media
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Jellyfin
    gethomepage.dev/group: Media
    gethomepage.dev/icon: jellyfin.png
spec:
  parentRefs:
    - name: internal
      namespace: networking
      sectionName: https
  hostnames: ["media.${SECRET_DOMAIN}"]
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-public
  namespace: media
spec:
  parentRefs:
    - name: external
      namespace: networking
      sectionName: https
    - name: internal
      namespace: networking
      sectionName: https
  hostnames: ["media.${PUBLIC_DOMAIN}"]
  rules:
    - backendRefs:
        - name: jellyfin
          port: 8096
